--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "vite": "^4.4.5",
     "concurrently": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "node-yt-dlp": "^4.0.0"
   }
 }
